首页部分内容

--- a/src/static/css/commonality.less
+++ b/src/static/css/commonality.less
@@ -33,6 +33,9 @@ a {
 .hs-666 {
   color: @colorgr;
 }
+.hss{
+  color: #FF7124;
+}
 .white {
   color: #fff;
 }
@@ -42,6 +45,9 @@ a {
 //背景颜色
 .background-colordeep{
   background: @colordeep;
+}
+.hsff-7124{
+  color: #FF7124;
 }
 .background-colorgr{
   background: @colorgr;
