--- a/src/static/css/icon.less
+++ b/src/static/css/icon.less
@@ -1,91 +1,47 @@
-.icon {
-  background: url("../images/icon.png");
+.icon-f {
+  background: url("../images/Bottom_icon.png");
   display: inline-block;
 }
-.icon-class {
-  width: 18px;
-  height: 14px;
+.icon-f-class {
+  width: 35px;
+  height: 32px;
+  &:hover{
+    background: url("../images/Bottom_icon2.png");
+    width: 35px;
+    height: 32px;
+  }
 }
-.icon-sj {
-  width: 8px;
-  height: 13px;
-  background-position: -45px 0px;
+.icon-f-class2 {
+  width: 35px;
+  height: 32px;
+  background-position: -41px 0px;
+  &:hover{
+    background: url("../images/Bottom_icon2.png");
+    width: 35px;
+    height: 32px;
+    background-position: -40px 0px;
+  }
 }
-.icon-gg {
-  width: 10px;
-  height: 15px;
-  background-position: -32px -103px;
-}
-.icon-hyp {
-  width: 15px;
-  height: 15px;
-  background-position: -80px 0px;
-}
-.icon-yy {
-  width: 60px;
-  height: 60px;
-  background-position: 0px -30px;
-}
-.icon-cbl {
-  width: 20px;
-  height: 22px;
-  background-position: 101px 0px;
-}
-.icon-cbl-gwc {
-  width: 20px;
-  height: 22px;
-  background-position: 81px 0px;
-}
-.icon-cbl-kf {
-  width: 20px;
-  height: 22px;
-  background-position: 57px 0px;
-}
-.icon-cbl-ewm {
-  width: 20px;
-  height: 22px;
-  background-position: 30px 0px;
-}
-.icon-cbl-g {
-    width: 20px;
-    height: 5px;
-    background-position: 0px 85px;
-}
-.icon-cbl-v {
-  width: 20px;
-  height: 18px;
-  background-position: 0px 70px;
+.icon-f-class3 {
+  width: 35px;
+  height: 32px;
+  background-position: -79px 0px;
+  &:hover{
+    background: url("../images/Bottom_icon2.png");
+    width: 35px;
+    height: 32px;
+    background-position: -79px 0px;
+  }
 }
 
-.jfscicon {
-  background: url("../images/jfsc-icon.png");
+.icon-c-v {
+  background: url("../images/index-icon-1.png");
   display: inline-block;
 }
-.jfscicon-rz {
-  width: 17px;
-  height: 16px;
-  background-position: 0px 0px;
-}
-.jfscicon-jf {
-  width: 30px;
-  height: 30px;
-  background-position: -20px 0px;
-}
-.jfscicon-yhj {
-  width: 30px;
-  height: 30px;
-  background-position: -50px 0px;
-}
-
-.jfscicon-jdf {
-  width: 7px;
-  height: 15px;
-  background-position: -87px 0px;
-  margin-top: 5px;
-}
-.jfscicon-jdf-h {
-  width: 7px;
-  height: 15px;
-  background-position: -96px 0px;
-  margin-top: 5px;
+.icon-c-v1 {
+  width: 41px;
+  height: 41px;
+  &:hover{
+    background: url("../images/index-icon-2.png");
+  }
 }
