--- a/src/static/css/commonality.less
+++ b/src/static/css/commonality.less
@@ -54,6 +54,9 @@ a {
 .background-colordeep{
   background: @colordeep;
 }
+.background-colorw{
+  background: #fff;
+}
 .hsff-7124{
   color: #FF7124;
 }
