--- a/src/static/css/icon.less
+++ b/src/static/css/icon.less
@@ -106,3 +106,59 @@
     background: url("../images/one-lqq_on.jpg");
   }
 }
+
+.icon-one-fixe1 {
+  background: url("../images/one-yy1.png") no-repeat;
+  display: inline-block;
+  background-position: center center;
+}
+.icon-one-fixe12 {
+  width: 67px;
+  height: 56px;
+  &:hover{
+    background: url("../images/one-yy.png") no-repeat;
+    background-position: center center;
+  }
+}
+
+.icon-one-fixe2 {
+  background: url("../images/one-wx.png") no-repeat;
+  display: inline-block;
+  background-position: center center;
+}
+.icon-one-fixe21 {
+  width: 67px;
+  height: 56px;
+  &:hover{
+    background: url("../images/one-wx2.png") no-repeat;
+    background-position: center center;
+  }
+}
+
+.icon-one-fixe3 {
+  background: url("../images/one-sj4.png") no-repeat;
+  display: inline-block;
+  background-position: center center;
+}
+.icon-one-fixe31 {
+  width: 67px;
+  height: 56px;
+  &:hover{
+    background: url("../images/one-sj.png") no-repeat;
+    background-position: center center;
+  }
+}
+
+.icon-nine-gth {
+  background: url("../images/nine-gth.png") no-repeat;
+  display: inline-block;
+  background-position: center center;
+}
+.icon-nine-gth2 {
+  width: 67px;
+  height: 56px;
+  &:hover{
+    background: url("../images/nine-gth.png") no-repeat;
+    background-position: center center;
+  }
+}
